# SUN-Scripts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_annot.py  maps.py  view.py
include/: MetaParser.hpp  Point.hpp  TrainExample.hpp
src/: main.cpp
